--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Game</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <canvas id="canvas1"></canvas>
 
+    <!-- Characters -->
+    <img id="player" src="Assets/player.png">
+    <img id="angler1" src="Assets/angler1.png">
+    <img id="angler2" src="Assets/angler2.png">
+    <img id="lucky" src="Assets/lucky.png">
+
+    <!-- Props -->
+    <img id="projectile" src="Assets/projectile.png">
+    <img id="gears" src="Assets/gears.png">
+
+    <!-- Enviroment -->
+    <img id="layer1" src="Assets/layer1.png">
+    <img id="layer2" src="Assets/layer2.png">
+    <img id="layer3" src="Assets/layer3.png">
+    <img id="layer4" src="Assets/layer4.png">
+
     <script src="script.js"></script>
 </body>
+
 </html>
