--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <img id="angler1" src="Assets/angler1.png">
     <img id="angler2" src="Assets/angler2.png">
     <img id="lucky" src="Assets/lucky.png">
+    <img id="hivewhale" src="Assets/hivewhale.png">
+    <img id="drone" src="Assets/drone.png">
 
     <!-- Props -->
     <img id="projectile" src="Assets/projectile.png">
     <img id="gears" src="Assets/gears.png">
+    <img id="smokeExplosion" src="Assets/smokeExplosion.png">
+    <img id="fireExplosion" src="Assets/fireExplosion.png">
 
     <!-- Enviroment -->
     <img id="layer1" src="Assets/layer1.png">
